--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -30,4 +30,6 @@ jobs:
     - name: 发布生成包到github和nuget
       run: |
         nuget push ./src/WWB.SDK.ArcFaceApi/bin/Release/*.nupkg -Source https://api.nuget.org/v3/index.json -SkipDuplicate -ApiKey ${{ secrets.NUGETKEY }} -NoSymbols
+        nuget push ./src/WWB.SDK.SmsApi/bin/Release/*.nupkg -Source https://api.nuget.org/v3/index.json -SkipDuplicate -ApiKey ${{ secrets.NUGETKEY }} -NoSymbols
         nuget push ./src/WWB.SDK.ArcFaceApi/bin/Release/*.nupkg -Source github -SkipDuplicate
+        nuget push ./src/WWB.SDK.SmsApi/bin/Release/*.nupkg -Source github -SkipDuplicate
