--- a/src/WWB.SDK.SmsApi/WWB.SDK.SmsApi.csproj
+++ b/src/WWB.SDK.SmsApi/WWB.SDK.SmsApi.csproj
@@ -2,6 +2,13 @@
 
     <PropertyGroup>
         <TargetFramework>netcoreapp3.1</TargetFramework>
+        <PackageId>WWB.SDK.SmsApi</PackageId>
+        <Version>1.0.0</Version>
+        <Authors>my6521</Authors>
+        <Description>NetCore3.1 微服务客户端SDK。</Description>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <RepositoryUrl>https://github.com/my6521/WWB.SDK</RepositoryUrl>
+        <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     </PropertyGroup>
     <ItemGroup>
         <PackageReference Include="WebApiClientCore" Version="2.0.1" />
